--- a/darknet_rsl/CMakeLists.txt
+++ b/darknet_rsl/CMakeLists.txt
@@ -1,7 +1,26 @@
 cmake_minimum_required(VERSION 2.8.12)
 project(darknet_rsl)
 
-#find_package(CUDA REQUIRED)
+FIND_PACKAGE(CUDA)
+if (CUDA_FOUND)
+	find_package(CUDA REQUIRED)
+    message(STATUS "CUDA Version: " ${CUDA_VERSION_STRINGS})
+    message(STATUS "CUDA Libararies: " ${CUDA_LIBRARIES})
+    include_directories(SYSTEM ${CUDA_INCLUDE_DIRS})
+    list(APPEND LIBRARIES ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES} ${CUDA_curand_LIBRARY} ${CUDA_cusparse_LIBRARY})
+    list(APPEND CUDA_NVCC_FLAGS "-std=c++11;-O2;-Xcompiler \"-fPIC\" ")
+    list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_20,code=compute_20 ")
+    list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_30,code=compute_30 ")
+    list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_35,code=compute_35 ")
+    list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_50,code=compute_50 ")
+    list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_52,code=compute_52 ")
+    set(CUDA_PROPAGATE_HOST_FLAGS OFF)
+    add_definitions(-DGPU)
+    cuda_include_directories(src)
+else()
+    list(APPEND LIBRARIES "m")
+endif()
+
 find_package(OpenCV REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
   cv_bridge
@@ -23,13 +42,6 @@ generate_messages(
    std_msgs
 )
 
-#set(
-#    CUDA_NVCC_FLAGS
-#    ${CUDA_NVCC_FLAGS};
-#    -O3 -gencode arch=compute_53,code=sm_53
-#    )
-
-#add_definitions(-DGPU -DOPENCV)
 add_definitions(-DOPENCV)
 
 catkin_package(
@@ -37,110 +49,180 @@ catkin_package(
 )
 
 include_directories(
-#  /usr/local/cuda/include
   src
   ${catkin_INCLUDE_DIRS}
 )
 
-#link_directories(
-#  /usr/local/cuda/lib64
-#)
+if (CUDA_FOUND)
+	link_directories(
+  		/usr/local/cuda/lib64
+	)
+	
+	cuda_add_executable(ros_interface 
+	  src/ros_interface.cpp
+	
+	  src/gemm.c 				src/utils.c 
+	  src/cuda.c 				src/deconvolutional_layer.c 
+	  src/convolutional_layer.c	src/list.c 
+	  src/image.c 				src/activations.c 
+	  src/im2col.c 				src/col2im.c 
+	  src/blas.c 				src/crop_layer.c 
+	  src/dropout_layer.c 		src/maxpool_layer.c 
+	  src/softmax_layer.c 		src/data.c 
+	  src/matrix.c 				src/network.c 
+	  src/connected_layer.c 	src/cost_layer.c 
+	  src/parser.c 				src/option_list.c 
+	  src/detection_layer.c		src/tag.c 
+	  src/imagenet.c 			src/captcha.c 
+	  src/route_layer.c 		src/writing.c 
+	  src/box.c 				src/nightmare.c 
+	  src/normalization_layer.c src/avgpool_layer.c 
+	  src/coco.c 				src/dice.c 
+	  src/yolo.c 				src/layer.c 
+	  src/compare.c 			src/classifier.c  
+	  src/local_layer.c 		src/shortcut_layer.c 
+	  src/activation_layer.c	src/cifar.c
+	  src/coco_demo.c			src/swag.c
+	  src/crnn_layer.c			src/go.c
+	  src/rnn.c					src/rnn_layer.c
+	  src/rnn_vid.c			
+	
+	  src/convolutional_kernels.cu  src/deconvolutional_kernels.cu 
+	  src/activation_kernels.cu 	src/im2col_kernels.cu 
+	  src/col2im_kernels.cu 	src/blas_kernels.cu 
+	  src/crop_layer_kernels.cu 	src/dropout_layer_kernels.cu 
+	  src/maxpool_layer_kernels.cu  src/softmax_layer_kernels.cu 
+	  src/network_kernels.cu 	src/avgpool_layer_kernels.cu 
+	  src/yolo_kernels.cu
+	)
 
-#cuda_add_executable(ros_interface 
-add_executable(ros_interface 
-  src/ros_interface.cpp
+	cuda_add_executable(yolo_object_detector
+	  src/yolo_object_detector.cpp
+	
+	  src/gemm.c                    src/utils.c
+	  src/cuda.c                    src/deconvolutional_layer.c
+	  src/convolutional_layer.c     src/list.c
+	  src/image.c                   src/activations.c
+	  src/im2col.c                  src/col2im.c
+	  src/blas.c                    src/crop_layer.c
+	  src/dropout_layer.c           src/maxpool_layer.c
+	  src/softmax_layer.c           src/data.c
+	  src/matrix.c                  src/network.c
+	  src/connected_layer.c         src/cost_layer.c
+	  src/parser.c                  src/option_list.c
+	  src/detection_layer.c         src/tag.c
+	  src/imagenet.c                src/captcha.c
+	  src/route_layer.c             src/writing.c
+	  src/box.c                     src/nightmare.c
+	  src/normalization_layer.c     src/avgpool_layer.c
+	  src/yolo_obj_detector.c       src/layer.c
+	  src/compare.c                 src/classifier.c
+	  src/local_layer.c             src/shortcut_layer.c
+	  src/activation_layer.c        src/cifar.c
+	  src/crnn_layer.c              src/go.c
+	  src/rnn.c                     src/rnn_layer.c
+	  src/rnn_vid.c			
+	
+	  src/convolutional_kernels.cu  src/deconvolutional_kernels.cu
+	  src/activation_kernels.cu     src/im2col_kernels.cu
+	  src/col2im_kernels.cu         src/blas_kernels.cu
+	  src/crop_layer_kernels.cu     src/dropout_layer_kernels.cu
+	  src/maxpool_layer_kernels.cu  src/softmax_layer_kernels.cu
+	  src/network_kernels.cu        src/avgpool_layer_kernels.cu
+	  src/yolo_kernels_ROSobj_detector.cu
+	)
 
-  src/gemm.c 			src/utils.c 
-  src/cuda.c 			src/deconvolutional_layer.c 
-  src/convolutional_layer.c 	src/list.c 
-  src/image.c 			src/activations.c 
-  src/im2col.c 			src/col2im.c 
-  src/blas.c 			src/crop_layer.c 
-  src/dropout_layer.c 		src/maxpool_layer.c 
-  src/softmax_layer.c 		src/data.c 
-  src/matrix.c 			src/network.c 
-  src/connected_layer.c 	src/cost_layer.c 
-  src/parser.c 			src/option_list.c 
-  src/detection_layer.c		src/tag.c 
-  src/imagenet.c 		src/captcha.c 
-  src/route_layer.c 		src/writing.c 
-  src/box.c 			src/nightmare.c 
-  src/normalization_layer.c 	src/avgpool_layer.c 
-  src/coco.c 			src/dice.c 
-  src/yolo.c 			src/layer.c 
-  src/compare.c 		src/classifier.c  
-  src/local_layer.c 		src/shortcut_layer.c 
-  src/activation_layer.c	src/cifar.c
-  src/coco_demo.c		src/swag.c
-  src/crnn_layer.c		src/go.c
-  src/rnn.c			src/rnn_layer.c
-  src/rnn_vid.c			src/yolo_demo.cpp
+	target_link_libraries(ros_interface
+	   m
+	   pthread
+	   stdc++
+	   cuda 
+	   cudart 
+	   cublas 
+	   curand
+	   ${catkin_LIBRARIES}
+	)
+	target_link_libraries(yolo_object_detector
+	   m
+	   pthread
+	   stdc++
+	   cuda
+	   cudart
+	   cublas
+	   curand
+	   ${catkin_LIBRARIES}
+	)
+else()
+	add_executable(ros_interface 
+	  src/ros_interface.cpp
+	
+	  src/gemm.c 				src/utils.c 
+	  src/cuda.c 				src/deconvolutional_layer.c 
+	  src/convolutional_layer.c src/list.c 
+	  src/image.c 				src/activations.c 
+	  src/im2col.c 				src/col2im.c 
+	  src/blas.c 				src/crop_layer.c 
+	  src/dropout_layer.c 		src/maxpool_layer.c 
+	  src/softmax_layer.c 		src/data.c 
+	  src/matrix.c 				src/network.c 
+	  src/connected_layer.c 	src/cost_layer.c 
+	  src/parser.c 				src/option_list.c 
+	  src/detection_layer.c		src/tag.c 
+	  src/imagenet.c 			src/captcha.c 
+	  src/route_layer.c 		src/writing.c 
+	  src/box.c 				src/nightmare.c 
+	  src/normalization_layer.c src/avgpool_layer.c 
+	  src/coco.c 				src/dice.c 
+	  src/yolo.c 				src/layer.c 
+	  src/compare.c 			src/classifier.c  
+	  src/local_layer.c 		src/shortcut_layer.c 
+	  src/activation_layer.c	src/cifar.c
+	  src/coco_demo.c			src/swag.c
+	  src/crnn_layer.c			src/go.c
+	  src/rnn.c					src/rnn_layer.c
+	  src/rnn_vid.c				src/yolo_demo.cpp
+	)
+	
+	add_executable(yolo_object_detector
+	  src/yolo_object_detector.cpp
+	
+	  src/gemm.c                    src/utils.c
+	  src/cuda.c                    src/deconvolutional_layer.c
+	  src/convolutional_layer.c     src/list.c
+	  src/image.c                   src/activations.c
+	  src/im2col.c                  src/col2im.c
+	  src/blas.c                    src/crop_layer.c
+	  src/dropout_layer.c           src/maxpool_layer.c
+	  src/softmax_layer.c           src/data.c
+	  src/matrix.c                  src/network.c
+	  src/connected_layer.c         src/cost_layer.c
+	  src/parser.c                  src/option_list.c
+	  src/detection_layer.c         src/tag.c
+	  src/imagenet.c                src/captcha.c
+	  src/route_layer.c             src/writing.c
+	  src/box.c                     src/nightmare.c
+	  src/normalization_layer.c     src/avgpool_layer.c
+	  src/yolo_obj_detector.c       src/layer.c
+	  src/compare.c                 src/classifier.c
+	  src/local_layer.c             src/shortcut_layer.c
+	  src/activation_layer.c        src/cifar.c
+	  src/crnn_layer.c              src/go.c
+	  src/rnn.c                     src/rnn_layer.c
+	  src/rnn_vid.c					src/yolo_demo_object_detector.cpp
+	)
 
-#  src/convolutional_kernels.cu  src/deconvolutional_kernels.cu 
-#  src/activation_kernels.cu 	src/im2col_kernels.cu 
-#  src/col2im_kernels.cu 	src/blas_kernels.cu 
-#  src/crop_layer_kernels.cu 	src/dropout_layer_kernels.cu 
-#  src/maxpool_layer_kernels.cu  src/softmax_layer_kernels.cu 
-#  src/network_kernels.cu 	src/avgpool_layer_kernels.cu 
-#  src/yolo_kernels.cu
-)
+	target_link_libraries(ros_interface
+	   m
+	   pthread
+	   stdc++
+	   ${catkin_LIBRARIES}
+	)
 
-#cuda_add_executable(yolo_object_detector
-add_executable(yolo_object_detector
-  src/yolo_object_detector.cpp
+	target_link_libraries(yolo_object_detector
+	   m
+	   pthread
+	   stdc++
+	   ${catkin_LIBRARIES}
+	)
 
-  src/gemm.c                    src/utils.c
-  src/cuda.c                    src/deconvolutional_layer.c
-  src/convolutional_layer.c     src/list.c
-  src/image.c                   src/activations.c
-  src/im2col.c                  src/col2im.c
-  src/blas.c                    src/crop_layer.c
-  src/dropout_layer.c           src/maxpool_layer.c
-  src/softmax_layer.c           src/data.c
-  src/matrix.c                  src/network.c
-  src/connected_layer.c         src/cost_layer.c
-  src/parser.c                  src/option_list.c
-  src/detection_layer.c         src/tag.c
-  src/imagenet.c                src/captcha.c
-  src/route_layer.c             src/writing.c
-  src/box.c                     src/nightmare.c
-  src/normalization_layer.c     src/avgpool_layer.c
-  src/yolo_obj_detector.c       src/layer.c
-  src/compare.c                 src/classifier.c
-  src/local_layer.c             src/shortcut_layer.c
-  src/activation_layer.c        src/cifar.c
-  src/crnn_layer.c              src/go.c
-  src/rnn.c                     src/rnn_layer.c
-  src/rnn_vid.c			src/yolo_demo_object_detector.cpp
-
-#  src/convolutional_kernels.cu  src/deconvolutional_kernels.cu
-#  src/activation_kernels.cu     src/im2col_kernels.cu
-#  src/col2im_kernels.cu         src/blas_kernels.cu
-#  src/crop_layer_kernels.cu     src/dropout_layer_kernels.cu
-#  src/maxpool_layer_kernels.cu  src/softmax_layer_kernels.cu
-#  src/network_kernels.cu        src/avgpool_layer_kernels.cu
-#  src/yolo_kernels_ROSobj_detector.cu
-)
-
-
-target_link_libraries(ros_interface
-   m
-   pthread
-   stdc++
-#   cuda 
-#   cudart 
-#   cublas 
-#   curand
-   ${catkin_LIBRARIES}
-)
-
-target_link_libraries(yolo_object_detector
-   m
-   pthread
-   stdc++
-#   cuda
-#   cudart
-#   cublas
-#   curand
-   ${catkin_LIBRARIES}
-)
+endif()
