--- a/darknet_rsl/CMakeLists.txt
+++ b/darknet_rsl/CMakeLists.txt
@@ -97,7 +97,7 @@ if (CUDA_FOUND)
 	)
 
 	cuda_add_executable(${PROJECT_NAME}
-	  src/yolo_object_detector.cpp
+	  src/YoloObjectDetector.cpp
 	  src/yolo_object_detector_node.cpp
 	
 	  src/gemm.c                    src/utils.c
@@ -185,7 +185,7 @@ else()
 	)
 	
 	add_executable(${PROJECT_NAME}
-	  src/yolo_object_detector.cpp
+	  src/YoloObjectDetector.cpp
 	  src/yolo_object_detector_node.cpp
 	
 	  src/gemm.c                    src/utils.c
