Deleted comments in Cmake file.
Former-commit-id: dca9fabf6de482ebd299cc9373072963ada32330

--- a/darknet2_rsl/CMakeLists.txt
+++ b/darknet2_rsl/CMakeLists.txt
@@ -4,24 +4,14 @@ project(darknet2_rsl)
 FIND_PACKAGE(CUDA)
 if (CUDA_FOUND)
 	find_package(CUDA REQUIRED)
-	#message(STATUS "CUDA Version: " ${CUDA_VERSION_STRINGS})
-	#message(STATUS "CUDA Libararies: " ${CUDA_LIBRARIES})
-	#include_directories(SYSTEM ${CUDA_INCLUDE_DIRS})
-	#list(APPEND LIBRARIES ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES} ${CUDA_curand_LIBRARY} ${CUDA_cusparse_LIBRARY})
-	#list(APPEND CUDA_NVCC_FLAGS "-std=c++11;-O2;-Xcompiler \"-fPIC\" ")
-	#list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_20,code=compute_20 ")
-	#list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_30,code=compute_30 ")
-	#list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_35,code=compute_35 ")
-	#list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_50,code=compute_50 ")
-	#list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_52,code=compute_52 ")
-	#set(CUDA_PROPAGATE_HOST_FLAGS OFF)
+	message(STATUS "CUDA Version: " ${CUDA_VERSION_STRINGS})
+	message(STATUS "CUDA Libararies: " ${CUDA_LIBRARIES})
 	set(
 		CUDA_NVCC_FLAGS
 		${CUDA_NVCC_FLAGS};
 		-O3 -gencode arch=compute_61,code=sm_61
 	)
 	add_definitions(-DGPU)
-	#cuda_include_directories(src)
 else()
 	list(APPEND LIBRARIES "m")
 endif()
