Changed CMakeLists and added some comments.
Former-commit-id: 20b04b01f28cd0b5145fb4998e28de689b0956de

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 2.8.12)
 project(darknet_rsl)
 
+# Define path of darknet folder here.
 set(DARKNET_PATH "/home/markob/git/darknet")
-add_definitions(-DDARKNET_FILE_PATH="/home/markob/git/darknet")
+add_definitions(-DDARKNET_FILE_PATH="${DARKNET_PATH}")
 
 FIND_PACKAGE(CUDA)
 if (CUDA_FOUND)
