Seperate msgs from darknet_rsl.
Former-commit-id: 8be11ce3d1e96e1440f8ec94b3d25c5ab1256dd0

--- a/darknet_rsl/CMakeLists.txt
+++ b/darknet_rsl/CMakeLists.txt
@@ -26,25 +26,20 @@ find_package(catkin REQUIRED COMPONENTS
 	roscpp
 	rospy
 	std_msgs
+	darknet_rsl_msgs
 	image_transport
-	message_generation
-)
-
-add_message_files(
-	FILES
-	BoundingBox.msg
-	BoundingBoxes.msg
-)
-
-generate_messages(
-	DEPENDENCIES
-	std_msgs
 )
 
 add_definitions(-DOPENCV)
 
 catkin_package(
-	CATKIN_DEPENDS message_runtime
+	CATKIN_DEPENDS
+		cv_bridge
+		roscpp
+		rospy
+		std_msgs
+		darknet_rsl_msgs
+		image_transport
 )
 
 if (CUDA_FOUND)
@@ -57,46 +52,46 @@ if (CUDA_FOUND)
 	link_directories(
   		/usr/local/cuda/lib64
 	)
-	
-	cuda_add_executable(ros_interface 
+
+	cuda_add_executable(ros_interface
 		src/ros_interface.cpp
 		src/yolo_demo.cpp
 		src/image_interface.c
-		
+
 		${DARKNET_PATH}/src/gemm.c 					${DARKNET_PATH}/src/utils.c
-		${DARKNET_PATH}/src/cuda.c					${DARKNET_PATH}/src/convolutional_layer.c 
+		${DARKNET_PATH}/src/cuda.c					${DARKNET_PATH}/src/convolutional_layer.c
 		${DARKNET_PATH}/src/list.c 					${DARKNET_PATH}/src/image.c
 		${DARKNET_PATH}/src/activations.c			${DARKNET_PATH}/src/im2col.c
-		${DARKNET_PATH}/src/col2im.c 				${DARKNET_PATH}/src/blas.c 
+		${DARKNET_PATH}/src/col2im.c 				${DARKNET_PATH}/src/blas.c
 		${DARKNET_PATH}/src/crop_layer.c 			${DARKNET_PATH}/src/dropout_layer.c
 		${DARKNET_PATH}/src/maxpool_layer.c			${DARKNET_PATH}/src/softmax_layer.c
 		${DARKNET_PATH}/src/data.c					${DARKNET_PATH}/src/matrix.c
 		${DARKNET_PATH}/src/network.c 				${DARKNET_PATH}/src/connected_layer.c
 		${DARKNET_PATH}/src/cost_layer.c				${DARKNET_PATH}/src/parser.c
-		${DARKNET_PATH}/src/option_list.c			${DARKNET_PATH}/src/tree.c 
+		${DARKNET_PATH}/src/option_list.c			${DARKNET_PATH}/src/tree.c
 		${DARKNET_PATH}/src/detection_layer.c 		${DARKNET_PATH}/src/captcha.c
 		${DARKNET_PATH}/src/route_layer.c 			${DARKNET_PATH}/src/writing.c
 		${DARKNET_PATH}/src/box.c					${DARKNET_PATH}/src/nightmare.c
-		${DARKNET_PATH}/src/normalization_layer.c 	${DARKNET_PATH}/src/avgpool_layer.c 
-		${DARKNET_PATH}/src/coco.c 					${DARKNET_PATH}/src/dice.c 
+		${DARKNET_PATH}/src/normalization_layer.c 	${DARKNET_PATH}/src/avgpool_layer.c
+		${DARKNET_PATH}/src/coco.c 					${DARKNET_PATH}/src/dice.c
 		${DARKNET_PATH}/src/yolo.c 					${DARKNET_PATH}/src/demo.c
-		${DARKNET_PATH}/src/layer.c					${DARKNET_PATH}/src/compare.c 
+		${DARKNET_PATH}/src/layer.c					${DARKNET_PATH}/src/compare.c
 		${DARKNET_PATH}/src/classifier.c 			${DARKNET_PATH}/src/local_layer.c
-		${DARKNET_PATH}/src/swag.c 					${DARKNET_PATH}/src/shortcut_layer.c 
-		${DARKNET_PATH}/src/activation_layer.c		${DARKNET_PATH}/src/rnn_layer.c 
+		${DARKNET_PATH}/src/swag.c 					${DARKNET_PATH}/src/shortcut_layer.c
+		${DARKNET_PATH}/src/activation_layer.c		${DARKNET_PATH}/src/rnn_layer.c
 		${DARKNET_PATH}/src/gru_layer.c				${DARKNET_PATH}/src/rnn.c
 		${DARKNET_PATH}/src/rnn_vid.c				${DARKNET_PATH}/src/crnn_layer.c
-		${DARKNET_PATH}/src/voxel.c					${DARKNET_PATH}/src/tag.c 
-		${DARKNET_PATH}/src/cifar.c 					${DARKNET_PATH}/src/go.c 
+		${DARKNET_PATH}/src/voxel.c					${DARKNET_PATH}/src/tag.c
+		${DARKNET_PATH}/src/cifar.c 					${DARKNET_PATH}/src/go.c
 		${DARKNET_PATH}/src/batchnorm_layer.c 		${DARKNET_PATH}/src/art.c
-		${DARKNET_PATH}/src/region_layer.c 			${DARKNET_PATH}/src/reorg_layer.c 
-		${DARKNET_PATH}/src/super.c	 	
-	
+		${DARKNET_PATH}/src/region_layer.c 			${DARKNET_PATH}/src/reorg_layer.c
+		${DARKNET_PATH}/src/super.c
+
 		${DARKNET_PATH}/src/convolutional_kernels.cu	${DARKNET_PATH}/src/network_kernels.cu
-		${DARKNET_PATH}/src/activation_kernels.cu 	${DARKNET_PATH}/src/im2col_kernels.cu 
-		${DARKNET_PATH}/src/col2im_kernels.cu 		${DARKNET_PATH}/src/blas_kernels.cu 
-		${DARKNET_PATH}/src/crop_layer_kernels.cu 	${DARKNET_PATH}/src/dropout_layer_kernels.cu 
-		${DARKNET_PATH}/src/maxpool_layer_kernels.cu	${DARKNET_PATH}/src/avgpool_layer_kernels.cu	
+		${DARKNET_PATH}/src/activation_kernels.cu 	${DARKNET_PATH}/src/im2col_kernels.cu
+		${DARKNET_PATH}/src/col2im_kernels.cu 		${DARKNET_PATH}/src/blas_kernels.cu
+		${DARKNET_PATH}/src/crop_layer_kernels.cu 	${DARKNET_PATH}/src/dropout_layer_kernels.cu
+		${DARKNET_PATH}/src/maxpool_layer_kernels.cu	${DARKNET_PATH}/src/avgpool_layer_kernels.cu
 	)
 
 	cuda_add_executable(${PROJECT_NAME}
@@ -104,50 +99,50 @@ if (CUDA_FOUND)
 		src/yolo_object_detector_node.cpp
 		src/object_detector_demo.cpp
 		src/image_interface.c
-		
+
 		${DARKNET_PATH}/src/gemm.c 					${DARKNET_PATH}/src/utils.c
-		${DARKNET_PATH}/src/cuda.c					${DARKNET_PATH}/src/convolutional_layer.c 
+		${DARKNET_PATH}/src/cuda.c					${DARKNET_PATH}/src/convolutional_layer.c
 		${DARKNET_PATH}/src/list.c 					${DARKNET_PATH}/src/image.c
 		${DARKNET_PATH}/src/activations.c			${DARKNET_PATH}/src/im2col.c
-		${DARKNET_PATH}/src/col2im.c 				${DARKNET_PATH}/src/blas.c 
+		${DARKNET_PATH}/src/col2im.c 				${DARKNET_PATH}/src/blas.c
 		${DARKNET_PATH}/src/crop_layer.c 			${DARKNET_PATH}/src/dropout_layer.c
 		${DARKNET_PATH}/src/maxpool_layer.c			${DARKNET_PATH}/src/softmax_layer.c
 		${DARKNET_PATH}/src/data.c					${DARKNET_PATH}/src/matrix.c
 		${DARKNET_PATH}/src/network.c 				${DARKNET_PATH}/src/connected_layer.c
 		${DARKNET_PATH}/src/cost_layer.c				${DARKNET_PATH}/src/parser.c
-		${DARKNET_PATH}/src/option_list.c			${DARKNET_PATH}/src/tree.c 
+		${DARKNET_PATH}/src/option_list.c			${DARKNET_PATH}/src/tree.c
 		${DARKNET_PATH}/src/detection_layer.c 		${DARKNET_PATH}/src/captcha.c
 		${DARKNET_PATH}/src/route_layer.c 			${DARKNET_PATH}/src/writing.c
 		${DARKNET_PATH}/src/box.c					${DARKNET_PATH}/src/nightmare.c
-		${DARKNET_PATH}/src/normalization_layer.c 	${DARKNET_PATH}/src/avgpool_layer.c 
-		${DARKNET_PATH}/src/coco.c 					${DARKNET_PATH}/src/dice.c 
+		${DARKNET_PATH}/src/normalization_layer.c 	${DARKNET_PATH}/src/avgpool_layer.c
+		${DARKNET_PATH}/src/coco.c 					${DARKNET_PATH}/src/dice.c
 		${DARKNET_PATH}/src/yolo.c 					${DARKNET_PATH}/src/demo.c
-		${DARKNET_PATH}/src/layer.c					${DARKNET_PATH}/src/compare.c 
+		${DARKNET_PATH}/src/layer.c					${DARKNET_PATH}/src/compare.c
 		${DARKNET_PATH}/src/classifier.c 			${DARKNET_PATH}/src/local_layer.c
-		${DARKNET_PATH}/src/swag.c 					${DARKNET_PATH}/src/shortcut_layer.c 
-		${DARKNET_PATH}/src/activation_layer.c		${DARKNET_PATH}/src/rnn_layer.c 
+		${DARKNET_PATH}/src/swag.c 					${DARKNET_PATH}/src/shortcut_layer.c
+		${DARKNET_PATH}/src/activation_layer.c		${DARKNET_PATH}/src/rnn_layer.c
 		${DARKNET_PATH}/src/gru_layer.c				${DARKNET_PATH}/src/rnn.c
 		${DARKNET_PATH}/src/rnn_vid.c				${DARKNET_PATH}/src/crnn_layer.c
-		${DARKNET_PATH}/src/voxel.c					${DARKNET_PATH}/src/tag.c 
-		${DARKNET_PATH}/src/cifar.c 					${DARKNET_PATH}/src/go.c 
+		${DARKNET_PATH}/src/voxel.c					${DARKNET_PATH}/src/tag.c
+		${DARKNET_PATH}/src/cifar.c 					${DARKNET_PATH}/src/go.c
 		${DARKNET_PATH}/src/batchnorm_layer.c 		${DARKNET_PATH}/src/art.c
-		${DARKNET_PATH}/src/region_layer.c 			${DARKNET_PATH}/src/reorg_layer.c 
-		${DARKNET_PATH}/src/super.c	 	
-		
+		${DARKNET_PATH}/src/region_layer.c 			${DARKNET_PATH}/src/reorg_layer.c
+		${DARKNET_PATH}/src/super.c
+
 		${DARKNET_PATH}/src/convolutional_kernels.cu	${DARKNET_PATH}/src/network_kernels.cu
-		${DARKNET_PATH}/src/activation_kernels.cu 	${DARKNET_PATH}/src/im2col_kernels.cu 
-		${DARKNET_PATH}/src/col2im_kernels.cu 		${DARKNET_PATH}/src/blas_kernels.cu 
-		${DARKNET_PATH}/src/crop_layer_kernels.cu 	${DARKNET_PATH}/src/dropout_layer_kernels.cu 
-		${DARKNET_PATH}/src/maxpool_layer_kernels.cu	${DARKNET_PATH}/src/avgpool_layer_kernels.cu	
+		${DARKNET_PATH}/src/activation_kernels.cu 	${DARKNET_PATH}/src/im2col_kernels.cu
+		${DARKNET_PATH}/src/col2im_kernels.cu 		${DARKNET_PATH}/src/blas_kernels.cu
+		${DARKNET_PATH}/src/crop_layer_kernels.cu 	${DARKNET_PATH}/src/dropout_layer_kernels.cu
+		${DARKNET_PATH}/src/maxpool_layer_kernels.cu	${DARKNET_PATH}/src/avgpool_layer_kernels.cu
 	)
 
 	target_link_libraries(ros_interface
 	   m
 	   pthread
 	   stdc++
-	   cuda 
-	   cudart 
-	   cublas 
+	   cuda
+	   cudart
+	   cublas
 	   curand
 	   ${catkin_LIBRARIES}
 	)
@@ -169,75 +164,75 @@ else()
 		${catkin_INCLUDE_DIRS}
 	)
 
-	add_executable(ros_interface 
+	add_executable(ros_interface
 		src/ros_interface.cpp
 		src/yolo_demo.cpp
 		src/image_interface.c
-		
+
 		${DARKNET_PATH}/src/gemm.c 					${DARKNET_PATH}/src/utils.c
-		${DARKNET_PATH}/src/cuda.c					${DARKNET_PATH}/src/convolutional_layer.c 
+		${DARKNET_PATH}/src/cuda.c					${DARKNET_PATH}/src/convolutional_layer.c
 		${DARKNET_PATH}/src/list.c 					${DARKNET_PATH}/src/image.c
 		${DARKNET_PATH}/src/activations.c			${DARKNET_PATH}/src/im2col.c
-		${DARKNET_PATH}/src/col2im.c 				${DARKNET_PATH}/src/blas.c 
+		${DARKNET_PATH}/src/col2im.c 				${DARKNET_PATH}/src/blas.c
 		${DARKNET_PATH}/src/crop_layer.c 			${DARKNET_PATH}/src/dropout_layer.c
 		${DARKNET_PATH}/src/maxpool_layer.c			${DARKNET_PATH}/src/softmax_layer.c
 		${DARKNET_PATH}/src/data.c					${DARKNET_PATH}/src/matrix.c
 		${DARKNET_PATH}/src/network.c 				${DARKNET_PATH}/src/connected_layer.c
 		${DARKNET_PATH}/src/cost_layer.c				${DARKNET_PATH}/src/parser.c
-		${DARKNET_PATH}/src/option_list.c			${DARKNET_PATH}/src/tree.c 
+		${DARKNET_PATH}/src/option_list.c			${DARKNET_PATH}/src/tree.c
 		${DARKNET_PATH}/src/detection_layer.c 		${DARKNET_PATH}/src/captcha.c
 		${DARKNET_PATH}/src/route_layer.c 			${DARKNET_PATH}/src/writing.c
 		${DARKNET_PATH}/src/box.c					${DARKNET_PATH}/src/nightmare.c
-		${DARKNET_PATH}/src/normalization_layer.c 	${DARKNET_PATH}/src/avgpool_layer.c 
-		${DARKNET_PATH}/src/coco.c 					${DARKNET_PATH}/src/dice.c 
+		${DARKNET_PATH}/src/normalization_layer.c 	${DARKNET_PATH}/src/avgpool_layer.c
+		${DARKNET_PATH}/src/coco.c 					${DARKNET_PATH}/src/dice.c
 		${DARKNET_PATH}/src/yolo.c 					${DARKNET_PATH}/src/demo.c
-		${DARKNET_PATH}/src/layer.c					${DARKNET_PATH}/src/compare.c 
+		${DARKNET_PATH}/src/layer.c					${DARKNET_PATH}/src/compare.c
 		${DARKNET_PATH}/src/classifier.c 			${DARKNET_PATH}/src/local_layer.c
-		${DARKNET_PATH}/src/swag.c 					${DARKNET_PATH}/src/shortcut_layer.c 
-		${DARKNET_PATH}/src/activation_layer.c		${DARKNET_PATH}/src/rnn_layer.c 
+		${DARKNET_PATH}/src/swag.c 					${DARKNET_PATH}/src/shortcut_layer.c
+		${DARKNET_PATH}/src/activation_layer.c		${DARKNET_PATH}/src/rnn_layer.c
 		${DARKNET_PATH}/src/gru_layer.c				${DARKNET_PATH}/src/rnn.c
 		${DARKNET_PATH}/src/rnn_vid.c				${DARKNET_PATH}/src/crnn_layer.c
-		${DARKNET_PATH}/src/voxel.c					${DARKNET_PATH}/src/tag.c 
-		${DARKNET_PATH}/src/cifar.c 					${DARKNET_PATH}/src/go.c 
+		${DARKNET_PATH}/src/voxel.c					${DARKNET_PATH}/src/tag.c
+		${DARKNET_PATH}/src/cifar.c 					${DARKNET_PATH}/src/go.c
 		${DARKNET_PATH}/src/batchnorm_layer.c 		${DARKNET_PATH}/src/art.c
-		${DARKNET_PATH}/src/region_layer.c 			${DARKNET_PATH}/src/reorg_layer.c 
-		${DARKNET_PATH}/src/super.c	 	
+		${DARKNET_PATH}/src/region_layer.c 			${DARKNET_PATH}/src/reorg_layer.c
+		${DARKNET_PATH}/src/super.c
 	)
-	
+
 	add_executable(${PROJECT_NAME}
 		src/YoloObjectDetector.cpp
 		src/yolo_object_detector_node.cpp
 		src/object_detector_demo.cpp
 		src/image_interface.c
-	
+
 		${DARKNET_PATH}/src/gemm.c 					${DARKNET_PATH}/src/utils.c
-		${DARKNET_PATH}/src/cuda.c					${DARKNET_PATH}/src/convolutional_layer.c 
+		${DARKNET_PATH}/src/cuda.c					${DARKNET_PATH}/src/convolutional_layer.c
 		${DARKNET_PATH}/src/list.c 					${DARKNET_PATH}/src/image.c
 		${DARKNET_PATH}/src/activations.c			${DARKNET_PATH}/src/im2col.c
-		${DARKNET_PATH}/src/col2im.c 				${DARKNET_PATH}/src/blas.c 
+		${DARKNET_PATH}/src/col2im.c 				${DARKNET_PATH}/src/blas.c
 		${DARKNET_PATH}/src/crop_layer.c 			${DARKNET_PATH}/src/dropout_layer.c
 		${DARKNET_PATH}/src/maxpool_layer.c			${DARKNET_PATH}/src/softmax_layer.c
 		${DARKNET_PATH}/src/data.c					${DARKNET_PATH}/src/matrix.c
 		${DARKNET_PATH}/src/network.c 				${DARKNET_PATH}/src/connected_layer.c
 		${DARKNET_PATH}/src/cost_layer.c				${DARKNET_PATH}/src/parser.c
-		${DARKNET_PATH}/src/option_list.c			${DARKNET_PATH}/src/tree.c 
+		${DARKNET_PATH}/src/option_list.c			${DARKNET_PATH}/src/tree.c
 		${DARKNET_PATH}/src/detection_layer.c 		${DARKNET_PATH}/src/captcha.c
 		${DARKNET_PATH}/src/route_layer.c 			${DARKNET_PATH}/src/writing.c
 		${DARKNET_PATH}/src/box.c					${DARKNET_PATH}/src/nightmare.c
-		${DARKNET_PATH}/src/normalization_layer.c 	${DARKNET_PATH}/src/avgpool_layer.c 
-		${DARKNET_PATH}/src/coco.c 					${DARKNET_PATH}/src/dice.c 
+		${DARKNET_PATH}/src/normalization_layer.c 	${DARKNET_PATH}/src/avgpool_layer.c
+		${DARKNET_PATH}/src/coco.c 					${DARKNET_PATH}/src/dice.c
 		${DARKNET_PATH}/src/yolo.c 					${DARKNET_PATH}/src/demo.c
-		${DARKNET_PATH}/src/layer.c					${DARKNET_PATH}/src/compare.c 
+		${DARKNET_PATH}/src/layer.c					${DARKNET_PATH}/src/compare.c
 		${DARKNET_PATH}/src/classifier.c 			${DARKNET_PATH}/src/local_layer.c
-		${DARKNET_PATH}/src/swag.c 					${DARKNET_PATH}/src/shortcut_layer.c 
-		${DARKNET_PATH}/src/activation_layer.c		${DARKNET_PATH}/src/rnn_layer.c 
+		${DARKNET_PATH}/src/swag.c 					${DARKNET_PATH}/src/shortcut_layer.c
+		${DARKNET_PATH}/src/activation_layer.c		${DARKNET_PATH}/src/rnn_layer.c
 		${DARKNET_PATH}/src/gru_layer.c				${DARKNET_PATH}/src/rnn.c
 		${DARKNET_PATH}/src/rnn_vid.c				${DARKNET_PATH}/src/crnn_layer.c
-		${DARKNET_PATH}/src/voxel.c					${DARKNET_PATH}/src/tag.c 
-		${DARKNET_PATH}/src/cifar.c 					${DARKNET_PATH}/src/go.c 
+		${DARKNET_PATH}/src/voxel.c					${DARKNET_PATH}/src/tag.c
+		${DARKNET_PATH}/src/cifar.c 					${DARKNET_PATH}/src/go.c
 		${DARKNET_PATH}/src/batchnorm_layer.c 		${DARKNET_PATH}/src/art.c
-		${DARKNET_PATH}/src/region_layer.c 			${DARKNET_PATH}/src/reorg_layer.c 
-		${DARKNET_PATH}/src/super.c  	
+		${DARKNET_PATH}/src/region_layer.c 			${DARKNET_PATH}/src/reorg_layer.c
+		${DARKNET_PATH}/src/super.c
 	)
 
 	target_link_libraries(ros_interface
