--- a/darknet_rsl/package.xml
+++ b/darknet_rsl/package.xml
@@ -17,6 +17,7 @@
    <build_depend>cv_bridge</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
+   <build_depend>darknet_rsl_msgs</build_depend>
 
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
@@ -28,5 +29,6 @@
    <run_depend>face_tracker</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
+   <run_depend>darknet_rsl_msgs</run_depend>
 
 </package>
