--- a/darknet_rsl/package.xml
+++ b/darknet_rsl/package.xml
@@ -9,6 +9,8 @@
    <author email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</author>
 
    <buildtool_depend>catkin</buildtool_depend>
+   <build_depend>boost</build_depend>
+   
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
@@ -18,6 +20,8 @@
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>darknet_rsl_msgs</build_depend>
+   <build_depend>actionlib</build_depend>
+   <build_depend>param_io</build_depend>
 
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
@@ -30,5 +34,7 @@
    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>darknet_rsl_msgs</run_depend>
+   <run_depend>actionlib</run_depend>
+   <run_depend>param_io</run_depend>
 
 </package>
